# sku-ops

./: .cursorrules  .dockerignore  .env.production.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  README.md  TESTING.md  backend_test.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  pixi.toml  pyproject.toml  pyrightconfig.json  railway.toml  seed_catalog.py  vercel.json
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  auth.py  cli.py  config.py  db.py  full_schema.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  routes.py  scheduler.py  server.py  startup.py
backend/adapters/: payment_factory.py  xero_adapter.py
backend/api/: __init__.py  auth.py  chat.py  contractors.py  dashboard.py  departments.py  documents.py  financials.py  health.py  invoices.py  material_requests.py  payments.py  products.py  reports.py  schemas.py  seed.py  vendors.py  webhooks.py  withdrawals.py  xero_auth.py
backend/api/beta/: __init__.py  api.py
backend/assistant/agents/: agent_utils.py  contracts.py  dag.py  deps.py  finance.py  general.py  insights.py  inventory.py  model_registry.py  ops.py  router.py  tokens.py  validators.py
backend/assistant/api/: chat.py  monitoring.py  schemas.py  ws_chat.py
backend/assistant/application/: agent_run_logging.py  assistant.py  context_assembly.py  entity_graph.py  job_manager.py  llm.py  llm_facade.py  queries.py  query_router.py  session_state.py  session_store.py
backend/assistant/config/: models.yaml
backend/assistant/evals/: __init__.py  __main__.py  runner.py  scorer.py
backend/assistant/infrastructure/: agent_run_repo.py  concurrency.py  embedding_store.py  schema.py
backend/catalog/api/: departments.py  product_families.py  products.py  schemas.py  sku.py  vendor_items.py  vendors.py
backend/catalog/application/: csv_import_service.py  product_classification.py  product_decomposition_prompt.md  product_family_lifecycle.py  product_intelligence.py  product_lifecycle.py  product_rules_partial.md  queries.py  sku_lifecycle.py  sku_service.py  uom_seed.py  vendor_item_lifecycle.py
backend/catalog/domain/: department.py  errors.py  product.py  product_analysis.py  product_family.py  sku.py  unit_of_measure.py  units.py  vendor.py  vendor_item.py
backend/catalog/infrastructure/: department_repo.py  product_family_repo.py  product_mutations.py  product_repo.py  schema.py  sku_counter_repo.py  sku_mutations.py  sku_repo.py  uom_repo.py  vendor_item_repo.py  vendor_repo.py
backend/catalog/ports/: department_repo_port.py  product_repo_port.py  vendor_repo_port.py
backend/devtools/api/: seed.py
backend/devtools/evals/: __main__.py  runner.py
backend/devtools/scripts/: agent_monitor.py  backfill_withdrawal_costs.py  seed.py  seed_full.py  seed_realistic.py
backend/documents/api/: document_parse_prompt.md  documents.py
backend/documents/application/: document_parse_prompt.md  enrichment_prompt.md  enrichment_service.py  import_parser.py  import_service.py  parse_service.py  queries.py
backend/documents/domain/: document.py
backend/documents/infrastructure/: document_repo.py  schema.py
backend/finance/adapters/: invoicing_factory.py  stub_xero.py  xero_adapter.py  xero_factory.py
backend/finance/api/: billing_entities.py  credit_notes.py  financials.py  fiscal_periods.py  invoices.py  payments.py  settings.py  xero_auth.py  xero_health.py
backend/finance/application/: billing_entity_service.py  credit_note_service.py  event_handlers.py  fiscal_period_service.py  invoice_service.py  invoice_sync.py  ledger_analytics.py  ledger_queries.py  ledger_service.py  org_settings_service.py  payment_service.py  po_sync_service.py  queries.py  xero_startup_check.py  xero_sync_job.py
backend/finance/domain/: credit_note.py  enums.py  fiscal_period.py  invoice.py  ledger.py  ledger_analytics_rows.py  org_settings.py  payment.py  xero_settings.py
backend/finance/infrastructure/: _invoice_fetch.py  billing_entity_repo.py  credit_note_repo.py  fiscal_period_repo.py  invoice_mutations.py  invoice_repo.py  invoice_xero_queries.py  ledger_repo.py  oauth_state_repo.py  org_settings_repo.py  payment_repo.py  schema.py
backend/finance/ports/: invoice_repo_port.py  invoicing_port.py  xero_port.py
backend/identity/api/: addresses.py  audit.py  auth.py  auth_deps.py  billing_entities.py  seed.py  settings.py
backend/identity/application/: auth_service.py  billing_entity_service.py  oauth_service.py  org_service.py  queries.py  (+1 more)
backend/kernel/: __init__.py  entity.py  types.py
backend/models/: __init__.py  invoice.py  product.py
backend/repositories/: __init__.py  department_repo.py  invoice_repo.py  material_request_repo.py  org_settings_repo.py  organization_repo.py  po_repo.py  product_repo.py  sku_repo.py  stock_repo.py  user_repo.py  vendor_repo.py  withdrawal_repo.py
backend/scripts/: __init__.py  agent_monitor.py  create_admin.py  fix_ruff_lints.py  seed.py  seed_realistic.py  verify_deploy.py  xero_smoke_test.py
backend/services/: assistant.py  document_enrichment.py  document_import_service.py  inventory.py  llm.py  product_lifecycle.py  sku_service.py  sku_slug.py  uom_classifier.py  withdrawal_service.py
backend/tests/: conftest.py  test_accounting_standards.py  test_adjustment_ledger_routing.py  test_architecture.py  test_barcode_api.py  test_barcode_validation.py  test_contractors_api.py  test_cycle_count.py  test_dashboard_api.py  test_decimal_quantities.py  test_domain_invariants.py  test_event_hub.py  test_fiscal_periods_api.py  test_integration.py  test_inventory.py  test_invoice_repo.py  test_llm_anthropic.py  test_material_request.py  test_memory.py  test_pagination_caps.py  test_po_receive.py  test_product_lifecycle.py  test_repo_contracts.py  test_schema_single_source.py  test_sell_cost_normalization.py  test_session_store.py  test_stock_ledger_integrity.py  test_stripe_payments.py  test_websocket.py  test_withdrawal_service.py  test_ws_chat.py  test_xero_adapter.py  test_xero_sync_job.py
(+852 files in other folders)
